add swagger documentation notation
