# app/Http/Controllers/api/v1/KonsumenController.php
@@ -10,6 +10,41 @@ use Illuminate\Support\Facades\Auth;
 
 class KonsumenController extends Controller
 {
+    /**
+     * @OA\Post(
+     *      path="/api/v1/konsumen/request_membership",
+     *      description="Request membership for konsumen",
+     *      @OA\Parameter(
+     *          name="No_Telfon",
+     *          in="query",
+     *          description="User's phone number",
+     *          required=true,
+     *      ),
+     *      @OA\Parameter(
+     *          name="Alamat",
+     *          in="query",
+     *          description="User's address",
+     *          required=true,
+     *      ),
+     *      @OA\Parameter(
+     *          name="Catatan",
+     *          in="query",
+     *          description="User's note",
+     *          required=true,
+     *      ),
+     *      @OA\Response(
+     *          response="200", 
+     *          description="Request OK",
+     *      ),
+     *      @OA\Response(
+     *          response="401", 
+     *          description="Validation error",
+     *      ),
+     *      security={
+     *          {"Bearer":{}}
+     *      }
+     * )
+     */
     public function membership_request(Request $request)
     {
 
@@ -51,6 +86,16 @@ class KonsumenController extends Controller
         ], 200);
     }
 
+    /**
+     * @OA\Get(
+     *      path="/api/v1/konsumen/activated_membership",
+     *      description="Get activated membership for konsumen",
+     *      @OA\Response(
+     *          response="200", 
+     *          description="Request OK",
+     *      )
+     * )
+     */
     public function get_activated_membership(Request $request)
     {
         $activated_membership = Konsumen::where('Membership', 'VIP')->get();
@@ -61,6 +106,19 @@ class KonsumenController extends Controller
         ], 200);
     }
 
+    /**
+     * @OA\Get(
+     *      path="/api/v1/konsumen/get_membership_request",
+     *      description="Get membership request",
+     *      @OA\Response(
+     *          response="200", 
+     *          description="Request OK",
+     *      ),
+     *      security={
+     *          {"Bearer":{}}
+     *      }
+     * )
+     */
     public function get_membership_request(Request $request)
     {
         $user = Auth::user();
